# ros-bridge

opencda_ros/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
opencda_ros/config/: mainline_ADS_vehicle_1.json  objects.json  single_ADS_vehicle.json
opencda_ros/launch/: launch_platoon_Suntrax.launch.py
opencda_ros/src/opencda_ros/: Suntrax_platoon_main.py  vehicle_data_subscriber.py
